# cupidfetch

./: .gitignore  CMakeLists.txt  Makefile  README.md  chat_log.txt  config.c  crazy.txt  cupidfetch.c  cupidfetch.ini  cursor.cur  custom-cursor.cur  download.php  getsong.php  index.php  install-config.sh  main.c  oldcursor.cur  quotes.json  search.php  styles.css
data/: cupidfetch.ini  distros.def
examples/: minimal.ini
js/: banner.js  list.js  search.js  settings.js
news/: index.php  styles.css
note/: get-message.php  index.php  note.php  script.js  styles.css
src/: config.c  cupidfetch.h  log.c  main.c  modules.c  print.c
